Fix scrollbar styles in admin panel

--- a/core/web/src/components/admin/Admin.scss
+++ b/core/web/src/components/admin/Admin.scss
@@ -1,7 +1,8 @@
 @use '@styles/globals' as *;
 
 .MuiTableContainer-root::-webkit-scrollbar,
-.MuiTablePagination-root::-webkit-scrollbar {
+.MuiTablePagination-root::-webkit-scrollbar,
+.MuiDialog-paper::-webkit-scrollbar {
   width: 10px;
 
   &-track {
